@@ -2,7 +2,6 @@ package com.copyright.rup.dist.foreign.vui.vaadin.common.ui.component.window;
 
 import com.vaadin.flow.data.binder.Validator;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.Consumer;
@@ -32,10 +31,24 @@ public final class ConfirmWindows {
      * @param action         action on confirmation button click
      */
     public static void showConfirmDialogWithReason(String caption, String message, String confirmCaption,
-                                                   String declineCaption,
-                                                   Consumer<String> action) {
-        showConfirmDialogWithReason(caption, message, confirmCaption, declineCaption, action,
-            Collections.emptyList());
+                                                   String declineCaption, Consumer<String> action) {
+        showConfirmDialogWithReason(caption, message, confirmCaption, declineCaption, action, List.of());
+    }
+
+    /**
+     * Shows confirm action dialog window.
+     *
+     * @param caption        caption of dialog
+     * @param message        message of dialog
+     * @param confirmCaption caption for confirm button
+     * @param declineCaption caption for decline button
+     * @param action         action on confirmation button click
+     * @param validator      validator for reason text field
+     */
+    public static void showConfirmDialogWithReason(String caption, String message, String confirmCaption,
+                                                   String declineCaption, Consumer<String> action,
+                                                   Validator<String> validator) {
+        showConfirmDialogWithReason(caption, message, confirmCaption, declineCaption, action, List.of(validator));
     }
 
     /**
@@ -49,8 +62,7 @@ public final class ConfirmWindows {
      * @param validators     list of validators for reason text field
      */
     public static void showConfirmDialogWithReason(String caption, String message, String confirmCaption,
-                                                   String declineCaption,
-                                                   Consumer<String> action,
+                                                   String declineCaption, Consumer<String> action,
                                                    List<Validator<String>> validators) {
         Objects.requireNonNull(validators);
         ConfirmActionDialogWindow window =
